--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "bcryptjs": "^3.0.3",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
